--- a/create-pass.html
+++ b/create-pass.html
@@ -19,8 +19,8 @@
        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
    </head>
    <body>
-       <div id="home" class="content">
-         <header>
+     <div id="home" class="content">
+           <header>
               <img src="assets/logo.svg" alt="Roquet.Q Logo"/>
            </header>
 
@@ -33,28 +33,16 @@
         <main>
           <div class="container">
               <section>
-                  <h2>Entre como participante</h2>
+                  <h2>Crie sua própria sala</h2>
                   <form action="">
-                      <label class="sr-only" for="room-id"> Código da sala</label>
-                      <input type="number" id="room-id" placeholder="Código da sala">
+                      <label class="sr-only" for="room-pass"> Insira uma senha</label>
+                      <input type="password" id="room-pass" placeholder="Insira uma senha">
                       <button>
-                          <img src="assets/enter-room.svg" alt="Entrar na sala">
-                          Entrar na sala
+                          <img src="assets/users-white.svg" alt="Criar sala">
+                          Criar sala
                       </button>
                   </form>
-              </section>
-
-                 <div class="separator">
-                 <div></div>    
-                 <div>ou</div>    
-                 <div></div>
-
-               <section>
-                   <h2>Crie sua propria sala de modo fácil</h2>
-                   <a href="create-room.html" class="button outlined">
-                       <img src="assets/users.svg" alt="Criar sala"> Criar sala
-                   </a>
-               </section>      
+             >      
               </div>
           </div>
         </main>
